fix(archive filter): alignment corrected in network

--- a/app/client/stylesheets/components/pu-columnslayoutaction.sass
+++ b/app/client/stylesheets/components/pu-columnslayoutaction.sass
@@ -7,11 +7,15 @@
         color: #999
         text-decoration: none
         transition: color .15s ease-out
+        vertical-align: top
 
         &:hover
             color: darken(#999, 20%)
 
-    .pu-button
+        i
+            margin-right: 5px
+
+    > .pu-button
         color: $color-text-inverted
         margin-left: 10px
         margin-top: -10px
@@ -23,3 +27,8 @@
 
         &:hover
             color: $color-text-inverted
+
+    aside
+        display: inline-block
+        margin-top: -8px
+        margin-left: 30px
